# bilal

./: .build.yml  .cliff.toml  .dprint.jsonc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.builds/: ci.yml
.github/workflows/: ci.yml  release.yml
configs/: cliff.toml
doc/: wiki.md
docs/: demo.sh  wiki.md
docs/dev/: release.sh  releasing.md
examples/: config.toml  i3status-rust.toml  polybar-module.ini
locales/: app.yml
scripts/: compress-assets.sh  prepare-assets.sh  release.sh
src/: app.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  prayer.rs  util.rs
tests/: integration.rs
tests/fixture/: invalid-method.toml
