[package]
name = "bilal"
version = "1.2.0"
authors = ["azzamsa <me@azzamsa.com>"]
categories = ["date-and-time", "command-line-utilities"]
edition = "2021"
keywords = ["salah", "pray", "islam"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/azzamsa/bilal"
description = "a CLI salah time"

[profile.release]
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
islam = "1.0.0"

atty = "0.2.14"
miette = { version = "5.5", features = ["fancy"] }
owo-colors = "3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.5"

[dependencies.clap]
version = "4.1"
features = ["suggestions", "color", "cargo", "derive"]

[dependencies.time]
version = "0.3.17"
features = ["formatting", "local-offset"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version}-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.release]
tag-message = "For details, see the CHANGELOG.md"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_prepare-release", "{{version}}"]
