[package]
name = "bilal"
version = "1.3.0"
authors = ["azzamsa <me@azzamsa.com>"]
categories = ["date-and-time", "command-line-utilities"]
edition = "2021"
keywords = ["salah", "pray", "islam"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/azzamsa/bilal"
description = "a CLI salah time"

[profile.release]
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
chrono = "0.4.26"
islam = "3.0.0"

# cli
atty = "0.2.14"
clap = { version = "4.3", features = ["suggestions", "color", "cargo", "derive"] }
owo-colors = "3"

# error
miette = { version = "5.9", features = ["fancy"] }
thiserror = "1.0"

# config
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.7", features = ["parse"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version}-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
