[package]
name = "bilal"
version = "1.9.0"
authors = ["azzamsa <me@azzamsa.com>"]
categories = ["date-and-time", "command-line-utilities"]
edition = "2021"
keywords = ["salah", "pray", "islam"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/azzamsa/bilal"
rust-version = "1.80.0"
description = "a CLI salah time"

[profile.release]
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
# islam = { path = "../islam" }
islam = "4.0.0"

# cli
clap = { version = "4.5", features = ["suggestions", "color", "cargo", "derive"] }
owo-colors = { version = "4", features = ["supports-colors"] }

# error
miette = { version = "7.2", features = ["fancy"] }
thiserror = "1.0"

# config
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", features = ["parse"] }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1.2"
predicates = "3.1"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version}-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
